--- a/package.json
+++ b/package.json
@@ -6,6 +6,22 @@
     "start": "node_modules/.bin/http-server -p 8181 app/ & open http://localhost:8181"
   },
   "dependencies": {
-    "http-server": "^0.9.0"
+    "bower": "^1.7.7",
+    "browser-sync": "^2.11.1",
+    "gulp": "^3.9.1",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-angular-templatecache": "^1.8.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-filter": "^2.0.2",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-minify-html": "^1.0.3",
+    "gulp-ng-annotate": "^1.0.0",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-watch": "^4.2.4",
+    "http-server": "^0.9.0",
+    "main-bower-files": "^2.8.2",
+    "wiredep": "^3.0.0-beta"
   }
 }
